Set up messages view and controller. Got rid of #! in url

--- a/views/home.html
+++ b/views/home.html
@@ -16,18 +16,10 @@
 
 		<br>
 
-		<button class="unselectedButton" style="margin-top: 20px">
-			Next
-		</button>
+		<a ng-href="/messages">
+			<button class="unselectedButton" style="margin-top: 20px">
+				Next
+			</button>
+		</a>
 	</div>
-	
-	
-
-	<!-- <div ng-repeat="message in messages track by $index" ng-class="{'right': $index % 2 == 0}">
-		<strong>{{ message.user.name }}:</strong>
-		<span>{{ message.data }}</span>
-	</div>
-	<form ng-submit="send()">
-		<input ng-model="textbox">
-	</form> -->
 </center>
