--- a/views/messages.html
+++ b/views/messages.html
@@ -1,5 +1,5 @@
 <center>
-    Messages
+    <h3>Messages</h3>
     <div ng-repeat="message in messages track by $index" ng-class="{'right': $index % 2 == 0}">
 		<strong>{{ message.user.name }}:</strong>
 		<span>{{ message.data }}</span>
