--- a/views/home.html
+++ b/views/home.html
@@ -1,11 +1,14 @@
 <center>
+	<h3>What is your first name?</h3>
+	<input type="text" ng-model="user.name"/>
+	
 	<h3>What is your primary speaking language?</h3>
-	<select ng-change="selectLanguage()" ng-model="language">
+	<select ng-change="selectLanguage()" ng-model="user.language">
 		<option value="English">English</option>
 		<option value="Spanish">Spanish</option>
 	</select>
 
-	<div ng-show='language'>
+	<div ng-show='user.language'>
 		<h3>I want to...</h3>
 		<button ng-click="selectAction('receive')" ng-class="receiveClass">
 			Receive Directions
@@ -16,10 +19,8 @@
 
 		<br>
 
-		<a ng-href="/messages">
-			<button class="unselectedButton" style="margin-top: 20px">
-				Next
-			</button>
-		</a>
+		<button class="unselectedButton" ng-click="next()" style="margin-top: 20px">
+			Next
+		</button>
 	</div>
 </center>
