--- a/views/messages.html
+++ b/views/messages.html
@@ -7,4 +7,8 @@
 	<form ng-submit="send()">
 		<input ng-model="textbox">
 	</form>
+
+	<button class="unselectedButton" href="https://ufl.qualtrics.com/jfe/form/SV_3OTuo9bblZAOyON">
+		Complete Interaction
+	</button>
 </center>
