Starting to set language codes

--- a/views/settings.html
+++ b/views/settings.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="item">
                 <h3>Language to <br> RECEIVE directions:</h3>
-                <select ng-model="user.receiveDirectionsLanguage">
+                <select ng-model="user.receiveLanguage">
                     <option value="English">English</option>
                     <option value="Spanish">Spanish</option>
                 </select>
@@ -12,7 +12,7 @@
     
             <div class="item">
                 <h3>Language to <br> GIVE directions:</h3>
-                <select ng-model="user.giveDirectionsLanguage">
+                <select ng-model="user.giveLanguage">
                     <option value="English">English</option>
                     <option value="Spanish">Spanish</option>
                 </select>
