--- a/views/home.html
+++ b/views/home.html
@@ -3,16 +3,25 @@
 		<div class="item">
 			<h3>Language to <br> RECEIVE directions:</h3>
 			<select ng-model="receiveDirectionsLanguage">
+				<option ng-repeat="language in availableLanguages">
+					{{language}}
+				</option>
+
+				<!-- <option value="Arabic">Arabic</option>
 				<option value="English">English</option>
-				<option value="Spanish">Spanish</option>
+				<option value="French">French</option>
+				<option value="Italian">Italian</option>
+				<option value="Portuguese">Portuguese</option>
+				<option value="Spanish">Spanish</option> -->
 			</select>
 		</div>
 
 		<div class="item">
 			<h3>Language to <br> GIVE directions:</h3>
 			<select ng-model="giveDirectionsLanguage">
-				<option value="English">English</option>
-				<option value="Spanish">Spanish</option>
+				<option ng-repeat="language in availableLanguages">
+					{{language}}
+				</option>
 			</select>
 		</div>
 	</div>
