--- a/views/messages.html
+++ b/views/messages.html
@@ -1,13 +1,18 @@
 <center>
-    <h3>Messages</h3>
-    <div ng-repeat="message in messages track by $index" ng-class="{'right': $index % 2 == 0}">
+	<h3>Messages</h3>
+	<label for="textToTranslate">Translate this:</label>
+	<input type="text" ng-model="textToTranslate"/>
+    <!-- <div ng-repeat="message in messages track by $index" ng-class="{'right': $index % 2 == 0}">
 		<strong>{{ message.user.name }}:</strong>
 		<span>{{ message.data }}</span>
 	</div>
 	<form ng-submit="send()">
 		<input ng-model="textbox">
-	</form>
+	</form> -->
 
+	<button class="unselectedButton">
+		Translate Text
+	</button>
 	<button class="unselectedButton" href="https://ufl.qualtrics.com/jfe/form/SV_3OTuo9bblZAOyON">
 		Complete Interaction
 	</button>
