--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ html {
 }
 
 .item {
-	padding: 0px 30px;
+	background-color: #4d8774; 
+	margin: 0px 5px;
+	padding: 5px 30px 15px 30px;
 	width: 20%;
 }
 
