--- a/views/messages.html
+++ b/views/messages.html
@@ -1,11 +1,12 @@
 <center>
 	<h2>Directions Request and Translation</h2>
-	<div class="container">
+	<img ng-hide="loadingComplete" src="img/loader.gif" alt="Loading...">
+	<div ng-show="loadingComplete" class="container">
 		<div class="item">
 			<strong>{{user.receivingName.toUpperCase()}}</strong>{{translatedReceiverText1}}
 			<br> <br>
 			{{translatedReceiverText2}}
-			<br>
+			<br> <br>
 			<input ng-model="directionsFrom" class="directionsInputs"> --> <input ng-model="directionsTo" class="directionsInputs">
 			<br> <br>
 			<button class="unselectedButton" ng-click="directionsRequested = true">
@@ -22,7 +23,7 @@
 			<u>{{directionsFrom}}</u> --> <u>{{directionsTo}}</u>. 
 			<br> <br>
 			{{translatedGiverText2}}
-			<br>
+			<br> <br>
 			<textarea ng-model="steps" style="width: 80%; height: 20%"></textarea>
 			<br> <br>
 			<button class="unselectedButton" ng-click="translateSteps()">
@@ -32,10 +33,23 @@
 		</div>
 	</div>
 
-	<div ng-show="ifStepsTranslated">
-		<h2>{{translatedReceiverStepsHeader}}</h2>
-		<p style="width: 50%">
+	<br>
+	<div ng-show="ifStepsTranslated" class="item" style="width: 35%">
+		<h2>{{translatedReceiverStepsHeader}} {{user.receivingName}}</h2>
+		<p style="width: 35%">
 			{{ stepsTranslated }}
+			<br> <br>
+			{{ translatedReceiverAnyQuestions }} {{user.givingName}}?
+		</p>
+		<input ng-model="receiverQuestion"/>
+		<br> <br>
+		<button class="unselectedButton" ng-click="askQuestion()">
+			{{ translatedReceiverAskQuestion }}
+		</button>
+		<p ng-show="questionAsked">
+			{{user.givingName}}, {{ translatedQuestion }}
+			<br>
+			{{translatedGiverAnswerQuestion}}
 		</p>
 	</div>
 
